# ZOTitan

./: .gitignore  README.md  data.py  eval.py  lora.py  losses.py  model.py  objective.py  pretty.py  profiling.py  pyproject.toml  run.sh  schedule.py  train.py  train_fo.py  train_zo.py
objectives/: __init__.py  c4.py  countdown.py  scijudge.py
sweeps/: countdown_overfit.py  eval.py  runall.py  runone.py  smoke.py  zo_variants.py
tests/: test_merged_ckpt.py  test_objective.py  test_smoke.py
zotitan/: eval.py  losses.py  objective.py  pretty.py  train.py  train_fo.py  train_zo.py
zotitan/objectives/: c4.py  countdown.py  scijudge.py
