[project]
name = "ZOTitan"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.11",
    "transformers==5.8.0",
    "datasets>=3.0",
    "accelerate>=1.0",
    "liger-kernel>=0.8",
    "tqdm",
    "tyro>=1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
packages = []
